// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostLoanedDocumentsList tests should load the component 1`] = `
<Grid>
  <GridRow>
    <GridColumn
      width={4}
    >
      <SegmentGroup>
        <Segment>
          <Header
            as="h3"
            content="Pick range of dates"
            subheader="Choose between which dates to search the most loaned documents"
          />
        </Segment>
        <SegmentGroup
          horizontal={true}
        >
          <Segment>
            <DateInput
              autoComplete="off"
              clearIcon={
                <Icon
                  as="i"
                  color="red"
                  name="remove"
                />
              }
              clearable={true}
              closable={true}
              dateFormat="YYYY-MM-DD"
              icon="calendar"
              iconPosition="left"
              inline={false}
              localization="en"
              maxDate=""
              name="fromDate"
              onChange={[Function]}
              placeholder="Start Date"
              preserveViewMode={true}
              startMode="day"
              value=""
            />
          </Segment>
          <Segment>
            <DateInput
              autoComplete="off"
              clearIcon={
                <Icon
                  as="i"
                  color="red"
                  name="remove"
                />
              }
              clearable={true}
              closable={true}
              dateFormat="YYYY-MM-DD"
              icon="calendar"
              iconPosition="left"
              inline={false}
              localization="en"
              minDate=""
              name="toDate"
              onChange={[Function]}
              placeholder="End Date"
              preserveViewMode={true}
              startMode="day"
              value=""
            />
          </Segment>
        </SegmentGroup>
      </SegmentGroup>
    </GridColumn>
    <GridColumn
      width={12}
    >
      <Loader>
        <Error>
          <ResultsTable
            currentPage={1}
            fixed={false}
            headerActionClickHandler={null}
            headerActionComponent={
              <ExportSearchResults
                onExportClick={[Function]}
              />
            }
            name="most loaned documents during this time period"
            paginationComponent={null}
            renderSegment={true}
            rowActionClickHandler={[Function]}
            rows={Array []}
            seeAllComponent={null}
            showAllResults={false}
            showMaxRows={30}
            singleLine={false}
            subtitle="Showing the 0 most checked-out documents."
            title="Most Loaned Documents"
          />
        </Error>
      </Loader>
    </GridColumn>
  </GridRow>
</Grid>
`;

exports[`MostLoanedDocumentsList tests should render show a message with no documents 1`] = `
<MostLoanedDocumentsList
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchMostLoanedDocuments={[Function]}
  showMaxDocuments={30}
>
  <Grid>
    <div
      className="ui grid"
    >
      <GridRow>
        <div
          className="row"
        >
          <GridColumn
            width={4}
          >
            <div
              className="four wide column"
            >
              <SegmentGroup>
                <div
                  className="ui segments"
                >
                  <Segment>
                    <div
                      className="ui segment"
                    >
                      <Header
                        as="h3"
                        content="Pick range of dates"
                        subheader="Choose between which dates to search the most loaned documents"
                      >
                        <h3
                          className="ui header"
                        >
                          Pick range of dates
                          <HeaderSubheader
                            content="Choose between which dates to search the most loaned documents"
                          >
                            <div
                              className="sub header"
                            >
                              Choose between which dates to search the most loaned documents
                            </div>
                          </HeaderSubheader>
                        </h3>
                      </Header>
                    </div>
                  </Segment>
                  <SegmentGroup
                    horizontal={true}
                  >
                    <div
                      className="ui horizontal segments"
                    >
                      <Segment>
                        <div
                          className="ui segment"
                        >
                          <DateInput
                            autoComplete="off"
                            clearIcon={
                              <Icon
                                as="i"
                                color="red"
                                name="remove"
                              />
                            }
                            clearable={true}
                            closable={true}
                            dateFormat="YYYY-MM-DD"
                            icon="calendar"
                            iconPosition="left"
                            inline={false}
                            localization="en"
                            maxDate=""
                            name="fromDate"
                            onChange={[Function]}
                            placeholder="Start Date"
                            preserveViewMode={true}
                            startMode="day"
                            value=""
                          >
                            <InputView
                              animation="scale"
                              autoComplete="off"
                              clearIcon={
                                <Icon
                                  as="i"
                                  color="red"
                                  name="remove"
                                />
                              }
                              clearable={true}
                              closeOnMouseLeave={true}
                              closePopup={[Function]}
                              duration={200}
                              icon="calendar"
                              iconPosition="left"
                              inline={false}
                              name="fromDate"
                              onChange={[Function]}
                              onFocus={[Function]}
                              onMount={[Function]}
                              openPopup={[Function]}
                              placeholder="Start Date"
                              popupIsClosed={true}
                              renderPicker={[Function]}
                              tabIndex="0"
                              value=""
                            >
                              <FormInputWithRef
                                autoComplete="off"
                                clearIcon={
                                  <Icon
                                    as="i"
                                    color="red"
                                    name="remove"
                                  />
                                }
                                clearable={true}
                                icon="calendar"
                                iconPosition="left"
                                innerRef={[Function]}
                                name="fromDate"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClear={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                placeholder="Start Date"
                                tabIndex="0"
                                value=""
                              >
                                <FormInput
                                  as={[Function]}
                                  autoComplete="off"
                                  control={[Function]}
                                  icon={true}
                                  iconPosition="left"
                                  name="fromDate"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  placeholder="Start Date"
                                  tabIndex="0"
                                >
                                  <FormField
                                    autoComplete="off"
                                    control={[Function]}
                                    icon={true}
                                    iconPosition="left"
                                    name="fromDate"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    placeholder="Start Date"
                                    tabIndex="0"
                                  >
                                    <div
                                      className="field"
                                    >
                                      <Input
                                        autoComplete="off"
                                        icon={true}
                                        iconPosition="left"
                                        name="fromDate"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseEnter={[Function]}
                                        placeholder="Start Date"
                                        tabIndex="0"
                                        type="text"
                                      >
                                        <div
                                          className="ui left icon input"
                                        >
                                          <Icon
                                            as="i"
                                            key=".0"
                                            name="calendar"
                                          >
                                            <i
                                              aria-hidden="true"
                                              className="calendar icon"
                                              onClick={[Function]}
                                            />
                                          </Icon>
                                          <input
                                            autoComplete="off"
                                            key=".1"
                                            name="fromDate"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onClick={[Function]}
                                            onFocus={[Function]}
                                            onMouseEnter={[Function]}
                                            placeholder="Start Date"
                                            tabIndex="0"
                                            type="text"
                                            value=""
                                          />
                                        </div>
                                      </Input>
                                    </div>
                                  </FormField>
                                </FormInput>
                              </FormInputWithRef>
                              <Transition
                                animation="scale"
                                duration={200}
                                mountOnShow={true}
                                onComplete={[Function]}
                                transitionOnMount={false}
                                unmountOnHide={true}
                                visible={false}
                              />
                            </InputView>
                          </DateInput>
                        </div>
                      </Segment>
                      <Segment>
                        <div
                          className="ui segment"
                        >
                          <DateInput
                            autoComplete="off"
                            clearIcon={
                              <Icon
                                as="i"
                                color="red"
                                name="remove"
                              />
                            }
                            clearable={true}
                            closable={true}
                            dateFormat="YYYY-MM-DD"
                            icon="calendar"
                            iconPosition="left"
                            inline={false}
                            localization="en"
                            minDate=""
                            name="toDate"
                            onChange={[Function]}
                            placeholder="End Date"
                            preserveViewMode={true}
                            startMode="day"
                            value=""
                          >
                            <InputView
                              animation="scale"
                              autoComplete="off"
                              clearIcon={
                                <Icon
                                  as="i"
                                  color="red"
                                  name="remove"
                                />
                              }
                              clearable={true}
                              closeOnMouseLeave={true}
                              closePopup={[Function]}
                              duration={200}
                              icon="calendar"
                              iconPosition="left"
                              inline={false}
                              name="toDate"
                              onChange={[Function]}
                              onFocus={[Function]}
                              onMount={[Function]}
                              openPopup={[Function]}
                              placeholder="End Date"
                              popupIsClosed={true}
                              renderPicker={[Function]}
                              tabIndex="0"
                              value=""
                            >
                              <FormInputWithRef
                                autoComplete="off"
                                clearIcon={
                                  <Icon
                                    as="i"
                                    color="red"
                                    name="remove"
                                  />
                                }
                                clearable={true}
                                icon="calendar"
                                iconPosition="left"
                                innerRef={[Function]}
                                name="toDate"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClear={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                placeholder="End Date"
                                tabIndex="0"
                                value=""
                              >
                                <FormInput
                                  as={[Function]}
                                  autoComplete="off"
                                  control={[Function]}
                                  icon={true}
                                  iconPosition="left"
                                  name="toDate"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  placeholder="End Date"
                                  tabIndex="0"
                                >
                                  <FormField
                                    autoComplete="off"
                                    control={[Function]}
                                    icon={true}
                                    iconPosition="left"
                                    name="toDate"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    placeholder="End Date"
                                    tabIndex="0"
                                  >
                                    <div
                                      className="field"
                                    >
                                      <Input
                                        autoComplete="off"
                                        icon={true}
                                        iconPosition="left"
                                        name="toDate"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseEnter={[Function]}
                                        placeholder="End Date"
                                        tabIndex="0"
                                        type="text"
                                      >
                                        <div
                                          className="ui left icon input"
                                        >
                                          <Icon
                                            as="i"
                                            key=".0"
                                            name="calendar"
                                          >
                                            <i
                                              aria-hidden="true"
                                              className="calendar icon"
                                              onClick={[Function]}
                                            />
                                          </Icon>
                                          <input
                                            autoComplete="off"
                                            key=".1"
                                            name="toDate"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onClick={[Function]}
                                            onFocus={[Function]}
                                            onMouseEnter={[Function]}
                                            placeholder="End Date"
                                            tabIndex="0"
                                            type="text"
                                            value=""
                                          />
                                        </div>
                                      </Input>
                                    </div>
                                  </FormField>
                                </FormInput>
                              </FormInputWithRef>
                              <Transition
                                animation="scale"
                                duration={200}
                                mountOnShow={true}
                                onComplete={[Function]}
                                transitionOnMount={false}
                                unmountOnHide={true}
                                visible={false}
                              />
                            </InputView>
                          </DateInput>
                        </div>
                      </Segment>
                    </div>
                  </SegmentGroup>
                </div>
              </SegmentGroup>
            </div>
          </GridColumn>
          <GridColumn
            width={12}
          >
            <div
              className="twelve wide column"
            >
              <Loader>
                <Error>
                  <ResultsTable
                    currentPage={1}
                    fixed={false}
                    headerActionClickHandler={null}
                    headerActionComponent={
                      <ExportSearchResults
                        onExportClick={[Function]}
                      />
                    }
                    name="most loaned documents during this time period"
                    paginationComponent={null}
                    renderSegment={true}
                    rowActionClickHandler={[Function]}
                    rows={Array []}
                    seeAllComponent={null}
                    showAllResults={false}
                    showMaxRows={30}
                    singleLine={false}
                    subtitle="Showing the 0 most checked-out documents."
                    title="Most Loaned Documents"
                  >
                    <Segment>
                      <div
                        className="ui segment"
                      >
                        <Grid>
                          <div
                            className="ui grid"
                          >
                            <GridRow>
                              <div
                                className="row"
                              >
                                <GridColumn
                                  verticalAlign="middle"
                                  width={13}
                                >
                                  <div
                                    className="middle aligned thirteen wide column"
                                  >
                                    <Header
                                      as="h3"
                                      content="Most Loaned Documents"
                                      subheader="Showing the 0 most checked-out documents."
                                    >
                                      <h3
                                        className="ui header"
                                      >
                                        Most Loaned Documents
                                        <HeaderSubheader
                                          content="Showing the 0 most checked-out documents."
                                        >
                                          <div
                                            className="sub header"
                                          >
                                            Showing the 0 most checked-out documents.
                                          </div>
                                        </HeaderSubheader>
                                      </h3>
                                    </Header>
                                  </div>
                                </GridColumn>
                                <GridColumn
                                  textAlign="right"
                                  width={3}
                                >
                                  <div
                                    className="right aligned three wide column"
                                  >
                                    <ExportSearchResults
                                      onExportClick={[Function]}
                                    />
                                  </div>
                                </GridColumn>
                              </div>
                            </GridRow>
                          </div>
                        </Grid>
                        <Message
                          data-test="no-results"
                        >
                          <div
                            className="ui message"
                            data-test="no-results"
                          >
                            There are no 
                            most loaned documents during this time period
                            .
                          </div>
                        </Message>
                      </div>
                    </Segment>
                  </ResultsTable>
                </Error>
              </Loader>
            </div>
          </GridColumn>
        </div>
      </GridRow>
    </div>
  </Grid>
</MostLoanedDocumentsList>
`;
